# vitastor

./: .dockerignore  .gitignore  .gitmodules  CLA-en.md  CLA-ru.md  CMakeLists.txt  LICENSE  Make-gen.pl  Makefile  README-ru.md  README.md  VNPL-1.0.txt  VNPL-1.1-RU.txt  VNPL-1.1.txt  allocator.cpp  allocator.h  base64.cpp  base64.h  blockstore.cpp  blockstore.h  blockstore_flush.cpp  blockstore_flush.h  blockstore_impl.cpp  blockstore_impl.h  blockstore_init.cpp  blockstore_init.h  blockstore_journal.cpp  blockstore_journal.h  blockstore_open.cpp  blockstore_read.cpp  blockstore_rollback.cpp  blockstore_stable.cpp  blockstore_sync.cpp  blockstore_write.cpp  cluster_client.cpp  cluster_client.h  copy-fio-includes.sh  copy-qemu-includes.sh  crc32c.c  crc32c.h  (+77 more)
cinder-driver/: libvirt-5.0-vitastor.diff  libvirt-7.0-vitastor.diff  libvirt-7.5-vitastor.diff  libvirt-example.xml
csi/: .dockerignore  Dockerfile  Dockerfile.local  Makefile  go.mod  go.sum  vitastor-csi.go
debian/: build-pve-qemu.sh  build-vitastor-bookworm.sh  build-vitastor-bullseye.sh  build-vitastor-buster.sh  build-vitastor-trixie.sh  build-vitastor-ubuntu-jammy.sh  build-vitastor-ubuntu-noble.sh  build-vitastor-ubuntu-questing.sh  build-vitastor-ubuntu-resolute.sh  changelog  control  copyright  fio_version  install  libisal.pc  libvirt.Dockerfile  node-vitastor.install  raw.h  (+20 more)
src/: CMakeLists.txt  addr_util.cpp  addr_util.h  allocator.cpp  allocator.h  base64.cpp  base64.h  blockstore.cpp  blockstore.h  blockstore_disk.cpp  blockstore_disk.h  blockstore_flush.cpp  blockstore_flush.h  blockstore_impl.cpp  blockstore_impl.h  blockstore_init.cpp  blockstore_init.h  blockstore_journal.cpp  blockstore_journal.h  blockstore_open.cpp  blockstore_read.cpp  blockstore_rollback.cpp  blockstore_stable.cpp  blockstore_sync.cpp  blockstore_write.cpp  cli.cpp  cli.h  cli_alloc_osd.cpp  cli_common.cpp  cli_create.cpp  cli_describe.cpp  cli_df.cpp  cli_fix.cpp  cli_fix.h  cli_flatten.cpp  cli_ls.cpp  cli_merge.cpp  cli_modify.cpp  cli_pool_cfg.cpp  cli_pool_cfg.h  (+133 more)
src/blockstore/: CMakeLists.txt  blockstore.cpp  blockstore.h  blockstore_disk.cpp  blockstore_disk.h  blockstore_flush.cpp  blockstore_flush.h  blockstore_heap.cpp  blockstore_heap.h  blockstore_impl.cpp  blockstore_impl.h  blockstore_init.cpp  blockstore_init.h  blockstore_internal.h  blockstore_journal.cpp  blockstore_journal.h  blockstore_open.cpp  blockstore_read.cpp  blockstore_rollback.cpp  blockstore_stable.cpp  blockstore_sync.cpp  blockstore_write.cpp  fio_engine.cpp  multilist.cpp  multilist.h  ondisk_formats.h
src/blockstore/v1/: flush.cpp  flush.h  impl.cpp  impl.h  init.cpp  internal.h  journal.cpp  open.cpp  read.cpp  rollback.cpp  stable.cpp  sync.cpp  write.cpp
src/cli/: cli_common.cpp  cli_flatten.cpp  cli_pool_create.cpp  cli_pool_ls.cpp  cli_pool_modify.cpp  cli_pool_rm.cpp
src/client/: CMakeLists.txt  cluster_client.cpp  cluster_client.h  cluster_client_impl.h  cluster_client_list.cpp  cluster_client_wb.cpp  etcd_state_client.cpp  etcd_state_client.h  fio_cluster.cpp  fio_sec_osd.cpp  http_client.cpp  http_client.h  messenger.cpp  messenger.h  msgr_op.cpp  msgr_op.h  msgr_rdma.cpp  msgr_rdma.h  msgr_rdmacm.cpp  msgr_receive.cpp  msgr_send.cpp  msgr_stop.cpp  nbd_proxy.cpp  object_id.h  osd_ops.cpp  osd_ops.h  pg_states.h  qemu_driver.c  ublk_server.cpp  vitastor.pc.in  vitastor_c.cpp  vitastor_c.h
src/cmd/: CMakeLists.txt  cli.cpp  cli.h  cli_alloc_osd.cpp  cli_common.cpp  cli_create.cpp  cli_dd.cpp  cli_describe.cpp  cli_fix.cpp  cli_fix.h  cli_ls.cpp  cli_merge.cpp  cli_modify.cpp  cli_modify_osd.cpp  cli_osd_tree.cpp  cli_pg_ls.cpp  cli_pool_cfg.cpp  cli_pool_create.cpp  cli_pool_ls.cpp  cli_pool_modify.cpp  cli_rm.cpp  cli_rm_data.cpp  cli_rm_osd.cpp  cli_rm_wildcard.cpp  cli_status.cpp
src/disk_tool/: CMakeLists.txt  disk_simple_offsets.cpp  disk_tool.cpp  disk_tool.h  disk_tool_discard.cpp  disk_tool_journal.cpp  disk_tool_meta.cpp  disk_tool_prepare.cpp  disk_tool_resize.cpp  disk_tool_resize_auto.cpp  disk_tool_udev.cpp  disk_tool_upgrade.cpp  disk_tool_utils.cpp
src/kv/: CMakeLists.txt  kv_cli.cpp  kv_db.cpp  kv_stress.cpp  vitastor_kv.h
src/liburing/: CMakeLists.txt  README
src/liburing/include/: liburing.h
src/liburing/include/liburing/: compat.h
src/mock/: build.sh  messenger.cpp  ringloop.h
src/nfs/: CMakeLists.txt  nfs.x  nfs_block.cpp  nfs_common.h  nfs_fsstat.cpp  nfs_kv.cpp  nfs_kv.h  nfs_kv_create.cpp  nfs_kv_defrag.cpp  nfs_kv_getattr.cpp  nfs_kv_link.cpp  nfs_kv_lookup.cpp  nfs_kv_read.cpp  nfs_kv_readdir.cpp  nfs_kv_remove.cpp  nfs_kv_rename.cpp  nfs_kv_setattr.cpp  nfs_kv_write.cpp  nfs_mount.cpp  nfs_portmap.cpp  nfs_portmap.h  nfs_proxy.cpp  nfs_proxy.h  nfs_proxy_rdma.cpp  nfs_xdr.cpp  portmap.x  rdma_alloc.cpp  rdma_alloc.h  rpc.x  rpc_xdr.cpp  xdr_impl_inline.h
src/nfs/proto/: nfs.h  nfs.x  nfs_xdr.cpp  nfs_xdr.cpp.diff  portmap.h  portmap_xdr.cpp  rpc.h  rpc.x  rpc_impl.h  rpc_rdma.h  rpc_rdma.x  rpc_rdma_xdr.cpp  rpc_xdr.cpp  run-rpcgen.sh  xdr_impl.cpp  xdr_impl.h  xdr_impl_inline.h
src/osd/: CMakeLists.txt  osd.cpp  osd.h  osd_cluster.cpp  osd_flush.cpp  osd_id.h  osd_main.cpp  osd_peering.cpp  osd_peering_pg.cpp  osd_peering_pg.h  osd_peering_pg_test.cpp  osd_primary.cpp  osd_primary.h  osd_primary_chain.cpp  osd_primary_describe.cpp  osd_primary_subops.cpp  osd_primary_sync.cpp  osd_primary_write.cpp  osd_rmw.cpp  osd_rmw.h  osd_rmw_test.cpp  osd_scrub.cpp  osd_secondary.cpp
src/test/: CMakeLists.txt  bindiff.c  osd_test.cpp  ringloop_mock.cpp  ringloop_mock.h  stub_osd.cpp  stub_uring_osd.cpp  test_allocator.cpp  test_atomic.cpp  test_blockstore.cpp  test_cas.cpp  test_cluster_client.cpp  test_crc32.cpp  test_heap.cpp
src/test/mock/: messenger.cpp  ringloop.h
src/util/: addr_util.cpp  addr_util.h  allocator.cpp  allocator.h  crc32c.c  crc32c.h  epoll_manager.cpp  epoll_manager.h  fio_headers.h  json_util.cpp  json_util.h  malloc_or_die.h  ringloop.cpp  ringloop.h  rw_blocking.cpp  rw_blocking.h  sha256.h  str_util.cpp  str_util.h  timerfd_manager.cpp  timerfd_manager.h  wyhash.h
(+403 files in other folders)
